Fix the org_top_ten list alignment with an HTML table and some CSS

--- a/widgets/list/list.scss
+++ b/widgets/list/list.scss
@@ -2,10 +2,10 @@
 // Sass declarations
 // ----------------------------------------------------------------------------
 $background-color:  #12b0c5;
-$value-color:       #fff;
+$label-color:       #fff;
 
 $title-color:       rgba(255, 255, 255, 0.7);
-$label-color:       rgba(255, 255, 255, 0.7);
+$value-color:       rgba(255, 255, 255, 0.7);
 $moreinfo-color:    rgba(255, 255, 255, 0.7);
 
 // ----------------------------------------------------------------------------
@@ -40,11 +40,14 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
   }
 
   .label {
+    font-weight: 700;
     color: $label-color;
   }
 
   .value {
     float: right;
+    line-height: 5px;
+    text-align: center;
     margin-left: 5px;
     font-weight: 600;
     color: $value-color;
